# kks-langchain-research

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  image-btp.sh  pyproject.toml
.github/workflows/: cicd-for-push.yml  cicd-for-tag.yml
charts/kks-langflow-app/: Chart.yaml  values.yaml
charts/kks-langflow-app/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/kks-langflow-app/templates/tests/: test-connection.yaml
