[tool.poetry]
name = "kks-langchain-research"
version = "0.1.0"
description = ""
authors = ["Kilsoo Kang <kilsoo75@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langflow = "^1.1.1"


[tool.poetry.group.quality.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
